# monad-road

./: .gitignore  2022li1g002.cabal  README.md
doc/html/: LI12223.html  Main.html  Tarefa1_2022li1g002.html  Tarefa2_2022li1g002.html  Tarefa3_2022li1g002.html  Tarefa4_2022li1g002.html  Tarefa5_2022li1g002.html  Tarefa6_2022li1g002.html  Visualizador.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-I.html  doc-index-J.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-Q.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  doc-index-V.html  doc-index.html  index.html
src/: LI12223.hs  Main.hs  Tarefa1_2022li1g002.hs  Tarefa2_2022li1g002.hs  Tarefa3_2022li1g002.hs  Tarefa4_2022li1g002.hs  Tarefa5_2022li1g002.hs  Tarefa6_2022li1g002.hs  Visualizador.hs
tests/: Fase1.hs  Spec.hs  Tarefa1_2022li1g002_Spec.hs  Tarefa2_2022li1g002_Spec.hs  Tarefa3_2022li1g002_Spec.hs  Tarefa4_2022li1g002_Spec.hs  Tarefa5_2022li1g002_Spec.hs
